fix(components/organisms/RoomMessage): stretch text

--- a/src/components/organisms/RoomMessage.css
+++ b/src/components/organisms/RoomMessage.css
@@ -3,8 +3,12 @@
   margin-bottom: 20px;
 }
 
+.content {
+  flex: 1;
+}
+
 .text {
-  flex: 0;
+  display: inline-block;
   background: white;
   border-radius: 10px;
   padding: 7px 15px;
